--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,23 @@
 Package: paneltools
 Type: Package
 Title: A Toolkit for Panel Data Anlayses
-Version: 0.0.1
-Date: 2023-01-07
+Version: 1.0.0
+Date: 2023-06-07
 Authors@R: 
-  c(person("Ziyi", "Liu", ,"zyliu2020@uchicago.edu", role = c("aut", "cre")),
+  c(person("Ziyi", "Liu", ,"ziyiliu2020@gmail.com", role = c("aut", "cre")),
+  person("Zhongyu", "Yin", ,"zhongyuy@stanford.edu", role = c("aut")),
   person("Yiqing", "Xu", ,"yiqingxu@stanford.edu", role = c("aut"), 
   comment = c(ORCID = "0000-0003-2041-6671")))
-Maintainer: Ziyi Liu <zyliu2020@uchicago.edu>
+Maintainer: Ziyi Liu <ziyiliu2020@gmail.com>
 Description: The package Paneltools provides implementations of common-used data preprocessing and results visualization for panel data analyses, including calculation of relative periods to the treatment and the visualization of dynamic treatment effects.  
 NeedsCompilation: yes
 License: MIT + file LICENSE
-Imports: ggplot2, Rcpp, RcppArmadillo
+Imports: ggplot2, dplyr
 SystemRequirements: A C++11 compiler.
 Depends: R (>= 3.5.0)
-LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.0
-Packaged: 2023-01-07 01:36:32 UTC; ziyil
+Packaged: 2023-06-07 01:36:32 UTC; ziyil
 Author: Ziyi Liu [aut, cre],
+  Zhongyu Yin [aut],
   Yiqing Xu [aut] (<https://orcid.org/0000-0003-2041-6671>)
 
